# xwchat

./: ._pytest_status_out.txt  .coverage  .gitignore  README.md  README_LONG.md  about.md  pyproject.toml  pyproject.xwchat.toml  pytest.ini  requirements.txt  test_output.txt
.github/: workflows-config.yaml
.github/workflows/: check-versions.yml  publish.yml
data/xwchat/providers/telegram/: xwstorage_chat_app.json.backup.1766441766  xwstorage_chat_app.json.backup.1766441768
docs/: GUIDE_01_USAGE.md  INDEX.md  REF_01_REQ.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_15_API.md  REF_22_PROJECT.md  REF_35_REVIEW.md  REF_51_TEST.md
docs/logs/reviews/: REVIEW_20260207_PROJECT_STATUS.md
src/exonware/: __init__.py
src/exonware/xwchat/: __init__.py  agent.py  base.py  contracts.py  defs.py  errors.py  logging_config.py  telegram_format.py  transport_actions.py  version.py
src/exonware/xwchat/providers/: __init__.py  dingtalk.py  discord.py  facebook_page.py  feishu.py  google_chat.py  (+33 more)
src/exonware_xwchat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  runner.py
tests/0.core/: __init__.py  test_core_agent.py  test_core_base.py  test_core_contracts.py  test_core_defs.py  test_core_errors.py  test_core_facade.py  test_core_imports.py  test_core_logging.py  test_core_package.py  test_core_version.py
tests/1.unit/: test_telegram_format.py
tests/1.unit/providers_tests/: __init__.py  test_providers_async_lifecycle.py  test_providers_basic.py  test_providers_dingtalk.py  test_providers_invalid_init.py  test_providers_slack.py  test_providers_telegram_format.py  test_providers_telegram_pause_queue.py  test_providers_telegram_utils.py
(+170 files in other folders)
